# aurora_back

./: .env.example  .gitignore  manage.py  pyproject.toml
api/: views.py
aurora_back/: asgi.py  settings.py  urls.py  wsgi.py
