[project]
name = "aurora-back"
version = "0.1.0"
description = ""
authors = [
    {name = "levanitchitchadze",email = "levan.tchitchadze@gau.edu.ge"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
